# raven

./: .gitignore  CHANGELOG.md  GAPS.md  METHODOLOGY.md  README.md  pyproject.toml  setup.cfg
benchmarks/longmemeval/: README.md  __init__.py  harness.py  heldout_guard.py  loader.py  phase2.1_split.md  scorer.py  split.py  token_efficiency.md  token_efficiency.py  v1.0-cold-results.md  v1.1_calibrated_results.md
benchmarks/longmemeval/scorers/: __init__.py  composite_ranked.py  retrieval_ranked.py
benchmarks/muninn/baselines/: results.json
benchmarks/muninn/corpus/: corpus.jsonl  corpus.sha256  generate.py  queries.jsonl
benchmarks/muninn/scoring/: baselines.py  harness.py  metrics.py
cli/: raven.py
corpus/decay_benchmark/: CHECKPOINT.md  build_corpus.py
corpus/decay_benchmark/scoring/: baseline_results.json  run_baselines.py
corpus/refusal_benchmark/: CHECKPOINT.md  generate.py  queries.jsonl
docs/: calibration_profiles.md  refusal_cookbook.md
docs/_examples/: 01_insufficient_evidence.py  02_conflicting_evidence.py  03_staleness.py  04_identity_ambiguous.py  05_scope_violation.py
docs/phase2.1/: loss_profile.md
docs/phase2.2/: lme-012-composite-ranked-scorer.md
raven/: pipeline.py  reconciliation.py  refusal.py
raven/calibration/: __init__.py  profile.py
raven/decay/: __init__.py  policies.py  registry.py
raven/storage/: embeddings.py  schema.py  store.py
raven/types/: __init__.py  phase1.py  v1.py
raven/validation/: __init__.py  aurora.py  eclipse.py  meteor.py  nova.py  pulsar.py  quasar.py
tests/: test_aurora.py  test_calibration_profile.py  test_decay.py  test_eclipse.py  test_longmemeval_scorers.py  test_meteor.py  test_nova.py  test_phase2_1_split.py  test_phase2_1_token_efficiency.py  test_pipeline.py  test_pulsar.py  test_quasar.py  test_reconciliation.py  test_refusal.py
(+423 files in other folders)
